--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "969483bc",
    "metadata": {},
    "outputs": [],
@@ -3197,15 +3197,13 @@
    "id": "60121532-63ae-41f6-a028-d130f3aa2d80",
    "metadata": {},
    "source": [
-    "From the CLI, I am using the following algorithms to generate files compatible to GNPS for FBMN: \n",
-    "\n",
     "#### MapAlignerPoseClustering is used to perform a linear retention time alignment, basically correct for linear shifts in retention time. \n",
     "Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/release/latest/html/TOPP_MapAlignerPoseClustering.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "596c20d3",
    "metadata": {},
    "outputs": [],
@@ -3254,27 +3252,12 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "15e88582",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unassigned peptides: 0\n",
-      "<ConsensusXMLFile::store():  found 16095 invalid unique ids> occurred 2 times\n",
-      "Peptides assigned to exactly one feature: 0\n",
-      "Peptides assigned to multiple features: 0\n",
-      "Unassigned and unidentified precursors: 3020\n",
-      "Unidentified precursor assigned to exactly one feature: 0\n",
-      "Unidentified precursor assigned to multiple features: 0\n",
-      "Feature annotation with identifications:\n",
-      "    no ID: 14069\n",
-      "    single ID: 0\n",
-      "    multiple IDs (identical): 0\n",
-      "    multiple IDs (divergent): 0\n",
-      "\n",
-      "\n",
       "Unassigned peptides: 0\n",
       "Peptides assigned to exactly one feature: 0\n",
       "Peptides assigned to multiple features: 0\n",
@@ -3300,21 +3283,30 @@
       "    multiple IDs (identical): 0\n",
       "    multiple IDs (divergent): 0\n",
       "\n",
+      "\n",
+      "Unassigned peptides: 0\n",
+      "Peptides assigned to exactly one feature: 0\n",
+      "Peptides assigned to multiple features: 0\n",
+      "Unassigned and unidentified precursors: 3020\n",
+      "Unidentified precursor assigned to exactly one feature: 0\n",
+      "Unidentified precursor assigned to multiple features: 0\n",
+      "Feature annotation with identifications:\n",
+      "    no ID: 14069\n",
+      "    single ID: 0\n",
+      "    multiple IDs (identical): 0\n",
+      "    multiple IDs (divergent): 0\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import pyopenms as pms\n",
     "input_files= glob.glob(\"results/interim/*.mzML\")\n",
-    "feature_files= glob.glob(\"results/consensus/interim/IDMapper?*.featureXML\")\n",
     "\n",
-    "feature_maps = []\n",
-    "for featurexml_file in feature_files:\n",
-    "    fmap = FeatureMap()\n",
-    "    FeatureXMLFile().load(featurexml_file, fmap)\n",
-    "    feature_maps.append(fmap)\n",
-    "   \n",
+    "exp = MSExperiment()\n",
+    "for filename in input_files:\n",
+    "    MzMLFile().load(filename, exp)\n",
+    "\n",
     "mapper = pms.IDMapper()\n",
     "protein_ids = []\n",
     "peptide_ids= []\n",
@@ -3322,16 +3314,17 @@
     "IdXMLFile().load(id_file, protein_ids, peptide_ids)\n",
     "use_centroid_rt= True\n",
     "use_centroid_mz= True\n",
-    "\n",
-    "exp = MSExperiment()\n",
-    "for filename in input_files:\n",
-    "    MzMLFile().load(filename, exp)\n",
     "    \n",
     "for featurexml_file in feature_maps:\n",
     "    mapper.annotate(featurexml_file, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
-    "    featureidx_file = os.path.join(\"results\", \"\", \"consensus\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(feature_map.getMetaValue('spectra_data')[0].decode())[19:-5] +\".featureXML\")\n",
+    "    featureidx_file = os.path.join(\"results\", \"\", \"consensus\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(featurexml_file.getMetaValue('spectra_data')[0].decode())[19:-5] +\".featureXML\")\n",
     "    FeatureXMLFile().store(featureidx_file, featurexml_file) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3440,7 +3433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "6a991b5b",
    "metadata": {},
    "outputs": [
@@ -3449,13 +3442,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    Progress of 'computing RT transformations':\n",
+      "        Progress of 'computing RT transformations':\n",
       "\n",
-      "    -- done [took 0.10 s (CPU), 0.09 s (Wall)] -- \n",
+      "        -- done [took 0.10 s (CPU), 0.10 s (Wall)] -- \n",
       "\n",
-      "    Progress of 'linking features':\n",
+      "        Progress of 'linking features':\n",
       "\n",
-      "    -- done [took 0.19 s (CPU), 0.19 s (Wall)] -- \n"
+      "        -- done [took 0.18 s (CPU), 0.18 s (Wall)] -- \n",
+      "ConsensusXMLFile::store():  found 16095 invalid unique ids\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "While storing '': ProteinIdentifications are not unique, which leads to loss of unique PeptideIdentification assignment. Duplicated Protein-ID is:UNKNOWN_SEARCH_RUN_IDENTIFIER.\nThe random chance of this error occurring is 1:2^64. Re-run the last tool and if the error occurs again, please report this as a bug in: ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/ipykernel_80035/1538924264.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mConsensus_file\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"results\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"consensus\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"interim\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'consensus'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".consensusXML\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mConsensusXMLFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mConsensus_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconsensus_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpyopenms/pyopenms_6.pyx\u001b[0m in \u001b[0;36mpyopenms.pyopenms_6.ConsensusXMLFile.store\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: While storing '': ProteinIdentifications are not unique, which leads to loss of unique PeptideIdentification assignment. Duplicated Protein-ID is:UNKNOWN_SEARCH_RUN_IDENTIFIER.\nThe random chance of this error occurring is 1:2^64. Re-run the last tool and if the error occurs again, please report this as a bug in: "
      ]
     }
    ],
