FeatureGroupingAlgorithmKD and FFMID issues

--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -3943,8 +3943,7 @@
    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.9.4 64-bit (conda)",
    "name": "python3"
   },
   "language_info": {
