--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c702beff",
    "metadata": {},
    "outputs": [
@@ -22,28 +22,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-10-24 15:09:13 INFO Started analyzing folder data/raw/\n",
-      "2021-10-24 15:09:13 INFO The folder contains 4 RAW files\n",
-      "2021-10-24 15:09:13 INFO Started parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep1.raw\n",
-      "2021-10-24 15:09:14 INFO Processing 5212 MS scans\n",
+      "2021-10-25 16:04:26 INFO Started analyzing folder data/raw/\n",
+      "2021-10-25 16:04:26 INFO The folder contains 3 RAW files\n",
+      "2021-10-25 16:04:26 INFO Started parsing data/raw/Epemicins.raw\n",
+      "2021-10-25 16:04:27 INFO Processing 4611 MS scans\n",
       "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
       "\n",
-      "2021-10-24 15:09:21 INFO Finished parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep1.raw\n",
-      "2021-10-24 15:09:21 INFO Started parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep3.raw\n",
-      "2021-10-24 15:09:22 INFO Processing 5079 MS scans\n",
+      "2021-10-25 16:04:36 INFO Finished parsing data/raw/Epemicins.raw\n",
+      "2021-10-25 16:04:36 INFO Started parsing data/raw/GermicidinB.raw\n",
+      "2021-10-25 16:04:37 INFO Processing 3619 MS scans\n",
       "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
       "\n",
-      "2021-10-24 15:09:30 INFO Finished parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep3.raw\n",
-      "2021-10-24 15:09:30 INFO Started parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep2.raw\n",
-      "2021-10-24 15:09:31 INFO Processing 5089 MS scans\n",
+      "2021-10-25 16:04:42 INFO Finished parsing data/raw/GermicidinB.raw\n",
+      "2021-10-25 16:04:42 INFO Started parsing data/raw/GermicidinA.raw\n",
+      "2021-10-25 16:04:42 INFO Processing 3625 MS scans\n",
       "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
       "\n",
-      "2021-10-24 15:09:39 INFO Finished parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep2.raw\n",
-      "2021-10-24 15:09:39 INFO Started parsing data/raw/20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_14_rep1.raw\n",
-      "2021-10-24 15:09:39 INFO Processing 5236 MS scans\n",
-      "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
-      "\n",
-      "2021-10-24 15:09:47 INFO Finished parsing data/raw/20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_14_rep1.raw\n"
+      "2021-10-25 16:04:47 INFO Finished parsing data/raw/GermicidinA.raw\n"
      ]
     }
    ],
@@ -180,7 +175,7 @@
    "source": [
     "# Preprocessing step\n",
     "\n",
-    "## The first preprocessing function consists of six steps:\n",
+    "## The first preprocessing function consists of five steps:\n",
     "\n",
     "### 1) PrecursorCorrection (To the \"highest intensity MS1 peak\")\n",
     "\n",
