--- a/2_IDMapper.ipynb
+++ b/2_IDMapper.ipynb
@@ -12,6 +12,54 @@
       "Determination of memory status is not supported on this \n",
       " platform, measuring for memoryleaks will never fail\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<built-in method getIdentifier of pyopenms.pyopenms_3.ProteinIdentification object at 0x7fabb84b2350>Unassigned peptides: 0\n",
+      "\n",
+      "Peptides assigned to exactly one feature: 0\n",
+      "Peptides assigned to multiple features: 0\n",
+      "Unassigned and unidentified precursors: 3015\n",
+      "Unidentified precursor assigned to exactly one feature: 0\n",
+      "Unidentified precursor assigned to multiple features: 0\n",
+      "Feature annotation with identifications:\n",
+      "    no ID: 1321\n",
+      "    single ID: 0\n",
+      "    multiple IDs (identical): 0\n",
+      "    multiple IDs (divergent): 0\n",
+      "\n",
+      "\n",
+      "Unassigned peptides: 0\n",
+      "<built-in method getIdentifier of pyopenms.pyopenms_3.ProteinIdentification object at 0x7fabb84b2c10>\n",
+      "Peptides assigned to exactly one feature: 0\n",
+      "Peptides assigned to multiple features: 0\n",
+      "Unassigned and unidentified precursors: 3587\n",
+      "Unidentified precursor assigned to exactly one feature: 0\n",
+      "Unidentified precursor assigned to multiple features: 0\n",
+      "Feature annotation with identifications:\n",
+      "    no ID: 14069\n",
+      "    single ID: 0\n",
+      "    multiple IDs (identical): 0\n",
+      "    multiple IDs (divergent): 0\n",
+      "\n",
+      "\n",
+      "<built-in method getIdentifier of pyopenms.pyopenms_3.ProteinIdentification object at 0x7fabb84b2590>Unassigned peptides: 0\n",
+      "Peptides assigned to exactly one feature: 0\n",
+      "Peptides assigned to multiple features: 0\n",
+      "Unassigned and unidentified precursors: 3020\n",
+      "Unidentified precursor assigned to exactly one feature: 0\n",
+      "Unidentified precursor assigned to multiple features: 0\n",
+      "Feature annotation with identifications:\n",
+      "    no ID: 1392\n",
+      "    single ID: 0\n",
+      "    multiple IDs (identical): 0\n",
+      "    multiple IDs (divergent): 0\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -22,7 +70,7 @@
     "import os\n",
     "import glob\n",
     "\n",
-    "input_feature_files = glob.glob('results/consensus/interim/MapAligner*.featureXML')\n",
+    "input_feature_files = glob.glob('results/consensus/interim/MapAligned*.featureXML')\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
@@ -39,7 +87,7 @@
     "\n",
     "mapper = pms.IDMapper()\n",
     "\n",
-    "input_mzml_files= glob.glob(\"results/interim(*mzML\")\n",
+    "input_mzml_files= glob.glob(\"results/interim/*mzML\")\n",
     "\n",
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
