--- a/3_FeatureGroupingAlgorithmKD.ipynb
+++ b/3_FeatureGroupingAlgorithmKD.ipynb
@@ -120,75 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "results/interim/precursorcorrected_Epemicins.mzML\n",
-      "5337473615715446915\n",
-      "\n",
-      "  Progress of 'computing RT transformations':\n",
-      "Warning: Only 22 data points for LOWESS fit of map 0. Consider adjusting RT or m/z tolerance or max_pairwise_log_fc, decreasing min_rel_cc_size, or increasing max_nr_conflicts.\n",
-      "\n",
-      "  -- done [took 0.10 s (CPU), 0.10 s (Wall)] -- \n",
-      "\n",
-      "  Progress of 'linking features':\n",
-      "    11.76 %               \n",
-      "  -- done [took 0.22 s (CPU), 0.21 s (Wall)] -- \n",
-      "ConsensusMap contains 2713 invalid references to maps:\n",
-      "  wrong id=1 (occurred 1392x)\n",
-      "  wrong id=2 (occurred 1321x)\n",
-      "\n",
-      "results/interim/precursorcorrected_GermicidinA.mzML\n",
-      "6251013509385742558\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The ConsensusXML file contains invalid maps or references thereof. Please fix the file or notify the maintainer of this tool if you did not provide a consensusXML file! Note that this warning will be a fatal error in the next version of OpenMS!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Progress of 'computing RT transformations':\n",
-      "Warning: Only 22 data points for LOWESS fit of map 0. Consider adjusting RT or m/z tolerance or max_pairwise_log_fc, decreasing min_rel_cc_size, or increasing max_nr_conflicts.\n",
-      "\n",
-      "  -- done [took 0.11 s (CPU), 0.12 s (Wall)] -- \n",
-      "\n",
-      "  Progress of 'linking features':\n",
-      "\n",
-      "  -- done [took 0.22 s (CPU), 0.22 s (Wall)] -- \n",
-      "ConsensusMap contains 1321 invalid references to maps:\n",
-      "  wrong id=2 (occurred 1321x)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The ConsensusXML file contains invalid maps or references thereof. Please fix the file or notify the maintainer of this tool if you did not provide a consensusXML file! Note that this warning will be a fatal error in the next version of OpenMS!\n",
-      "/Users/runner/work/OpenMS/OpenMS/OpenMS/src/openms/source/FORMAT/HANDLERS/XMLHandler.cpp(130): While storing '': ProteinIdentifications are not unique, which leads to loss of unique PeptideIdentification assignment. Duplicated Protein-ID is:_2021-10-26T16:33:02_9348948585403470039.\n"
+      "/Users/runner/work/OpenMS/OpenMS/OpenMS/src/openms/source/FORMAT/HANDLERS/XMLHandler.cpp(130): While loading 'results/consensus/interim/IDMapper_GermicidinA.featureXML': input ended before all started tags were ended; last tag started is 'convexhull'( in line 65019 column 23)\n"
      ]
     },
     {
      "ename": "RuntimeError",
-     "evalue": "While storing '': ProteinIdentifications are not unique, which leads to loss of unique PeptideIdentification assignment. Duplicated Protein-ID is:_2021-10-26T16:33:02_9348948585403470039.\nThe random chance of this error occurring is 1:2^64. Re-run the last tool and if the error occurs again, please report this as a bug in: ",
+     "evalue": "While loading 'results/consensus/interim/IDMapper_GermicidinA.featureXML': input ended before all started tags were ended; last tag started is 'convexhull'( in line 65019 column 23) in: results/consensus/interim/IDMapper_GermicidinA.featureXML",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/ipykernel_39469/1056401277.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mConsensus_file\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"results\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"consensus\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"interim\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'consensus'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".consensusXML\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0mConsensusXMLFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mConsensus_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconsensus_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpyopenms/pyopenms_6.pyx\u001b[0m in \u001b[0;36mpyopenms.pyopenms_6.ConsensusXMLFile.store\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: While storing '': ProteinIdentifications are not unique, which leads to loss of unique PeptideIdentification assignment. Duplicated Protein-ID is:_2021-10-26T16:33:02_9348948585403470039.\nThe random chance of this error occurring is 1:2^64. Re-run the last tool and if the error occurs again, please report this as a bug in: "
+      "\u001b[0;32m/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/ipykernel_39469/1056401277.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfeaturexml_file\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput_feature_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mfmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFeatureMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mFeatureXMLFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeaturexml_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mfeature_maps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpyopenms/pyopenms_1.pyx\u001b[0m in \u001b[0;36mpyopenms.pyopenms_1.FeatureXMLFile.load\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: While loading 'results/consensus/interim/IDMapper_GermicidinA.featureXML': input ended before all started tags were ended; last tag started is 'convexhull'( in line 65019 column 23) in: results/consensus/interim/IDMapper_GermicidinA.featureXML"
      ]
     }
    ],
