--- a/2_IDMapper.ipynb
+++ b/2_IDMapper.ipynb
@@ -17,48 +17,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<built-in method getIdentifier of pyopenms.pyopenms_3.ProteinIdentification object at 0x7fabb84b2350>Unassigned peptides: 0\n",
-      "\n",
-      "Peptides assigned to exactly one feature: 0\n",
-      "Peptides assigned to multiple features: 0\n",
-      "Unassigned and unidentified precursors: 3015\n",
-      "Unidentified precursor assigned to exactly one feature: 0\n",
-      "Unidentified precursor assigned to multiple features: 0\n",
-      "Feature annotation with identifications:\n",
-      "    no ID: 1321\n",
-      "    single ID: 0\n",
-      "    multiple IDs (identical): 0\n",
-      "    multiple IDs (divergent): 0\n",
-      "\n",
-      "\n",
-      "Unassigned peptides: 0\n",
-      "<built-in method getIdentifier of pyopenms.pyopenms_3.ProteinIdentification object at 0x7fabb84b2c10>\n",
-      "Peptides assigned to exactly one feature: 0\n",
-      "Peptides assigned to multiple features: 0\n",
-      "Unassigned and unidentified precursors: 3587\n",
-      "Unidentified precursor assigned to exactly one feature: 0\n",
-      "Unidentified precursor assigned to multiple features: 0\n",
-      "Feature annotation with identifications:\n",
-      "    no ID: 14069\n",
-      "    single ID: 0\n",
-      "    multiple IDs (identical): 0\n",
-      "    multiple IDs (divergent): 0\n",
-      "\n",
-      "\n",
-      "<built-in method getIdentifier of pyopenms.pyopenms_3.ProteinIdentification object at 0x7fabb84b2590>Unassigned peptides: 0\n",
-      "Peptides assigned to exactly one feature: 0\n",
-      "Peptides assigned to multiple features: 0\n",
-      "Unassigned and unidentified precursors: 3020\n",
-      "Unidentified precursor assigned to exactly one feature: 0\n",
-      "Unidentified precursor assigned to multiple features: 0\n",
-      "Feature annotation with identifications:\n",
-      "    no ID: 1392\n",
-      "    single ID: 0\n",
-      "    multiple IDs (identical): 0\n",
-      "    multiple IDs (divergent): 0\n",
-      "\n",
-      "\n",
-      "\n"
+      "/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics\n",
+      "[]\n",
+      "['results/interim/precursorcorrected_Epemicins.mzML', 'results/interim/precursorcorrected_GermicidinA.mzML', 'results/interim/precursorcorrected_GermicidinB.mzML']\n"
      ]
     }
    ],
@@ -69,8 +30,13 @@
     "import numpy as np\n",
     "import os\n",
     "import glob\n",
+    "import os\n",
     "\n",
-    "input_feature_files = glob.glob('results/consensus/interim/MapAligned*.featureXML')\n",
+    "print(os.getcwd())\n",
+    "    \n",
+    "# here was a typo alinged vs aligner, strange extension xml instead of featureXML\n",
+    "input_feature_files = sorted(glob.glob('results/consensus/interim/MapAligner*featureXML*'))\n",
+    "print(input_feature_files)\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
@@ -83,42 +49,21 @@
     "protein_ids = []\n",
     "peptide_ids= []\n",
     "\n",
-    "\n",
-    "\n",
     "mapper = pms.IDMapper()\n",
     "\n",
-    "input_mzml_files= glob.glob(\"results/interim/*mzML\")\n",
-    "\n",
+    "input_mzml_files= sorted(glob.glob(\"results/interim/*.mzML\"))\n",
+    "print(input_mzml_files)\n",
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
     "    MzMLFile().load(filename, exp)\n",
     "\n",
-    "    for fmap in feature_maps: \n",
+    "    for fmap in feature_maps:\n",
     "        if os.path.basename(fmap.getMetaValue('spectra_data')[0].decode()) == os.path.basename(filename):\n",
-    "\n",
-    "#            peptide_ids = []\n",
-    "#            protein_ids = []\n",
-    "#            protein_id = ProteinIdentification()\n",
-    "#            protein_id.setIdentifier(fmap.getMetaValue('spectra_data')[0].decode())\n",
-    "#            protein_ids.append(protein_id)\n",
-    "#            peptide_id = PeptideIdentification()\n",
-    "\n",
+    "            peptide_ids = []\n",
+    "            protein_ids = []\n",
+    "            \n",
     "            mapper.annotate(fmap, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
-    "            \n",
-    "            proteins = fmap.getProteinIdentifications()\n",
-    "\n",
-    "            fmap.setProteinIdentifications(proteins)\n",
-    "\n",
-    "            for index_protein, protein in enumerate(proteins):\n",
-    "                protein.setIdentifier(fmap.getMetaValue('spectra_data')[0])\n",
-    "                print(protein.getIdentifier)\n",
-    "            \n",
-    "            for index_feature, feature in enumerate(fmap):\n",
-    "                peptide_ids = feature.getPeptideIdentifications()\n",
-    "                for index_pep, pep in enumerate(feature.getPeptideIdentifications()):\n",
-    "                    pep.setIdentifier(fmap.getMetaValue('spectra_data')[0])\n",
-    "            feature.setPeptideIdentifications(peptide_ids)\n",
-    "                    #print(pep.getIdentifier())\n",
+    "            print(fmap.getMetaValue('spectra_data')[0].decode())\n",
     "        featureidx_file = os.path.join(\"results\", \"\", \"consensus\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[19:-5] +\".featureXML\")\n",
     "        FeatureXMLFile().store(featureidx_file, fmap)"
    ]
