--- a/3_FeatureGroupingAlgorithmKD.ipynb
+++ b/3_FeatureGroupingAlgorithmKD.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Determination of memory status is not supported on this \n",
-      " platform, measuring for memoryleaks will never fail\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyopenms import *\n",
     "import pyopenms as pms\n",
@@ -25,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/runner/work/OpenMS/OpenMS/OpenMS/src/openms/source/FORMAT/HANDLERS/XMLHandler.cpp(130): While loading 'results/consensus/interim/IDMapper_GermicidinA.featureXML': input ended before all started tags were ended; last tag started is 'convexhull'( in line 65019 column 23)\n"
+      "['results/consensus/interim/IDMapper_Epemicins.featureXML', 'results/consensus/interim/IDMapper_GermicidinA.featureXML', 'results/consensus/interim/IDMapper_GermicidinB.featureXML']\n"
      ]
     },
     {
@@ -137,19 +128,21 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/ipykernel_39469/1056401277.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfeaturexml_file\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput_feature_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mfmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFeatureMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mFeatureXMLFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeaturexml_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mfeature_maps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/ipykernel_46912/2936098976.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfeaturexml_file\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput_feature_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mfmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFeatureMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mFeatureXMLFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeaturexml_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mfeature_maps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32mpyopenms/pyopenms_1.pyx\u001b[0m in \u001b[0;36mpyopenms.pyopenms_1.FeatureXMLFile.load\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;31mRuntimeError\u001b[0m: While loading 'results/consensus/interim/IDMapper_GermicidinA.featureXML': input ended before all started tags were ended; last tag started is 'convexhull'( in line 65019 column 23) in: results/consensus/interim/IDMapper_GermicidinA.featureXML"
      ]
     }
    ],
    "source": [
+    "import glob\n",
     "feature_grouper = FeatureGroupingAlgorithmKD()\n",
     "\n",
     "consensus_map = ConsensusMapDF()\n",
     "file_descriptions = consensus_map.getColumnHeaders()\n",
     "\n",
-    "input_feature_files = glob.glob('results/consensus/interim/IDMapper*.featureXML')\n",
+    "input_feature_files = sorted(glob.glob('results/consensus/interim/IDMapper*.featureXML'))\n",
+    "print(input_feature_files)\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
@@ -163,16 +156,16 @@
     "    print(file_description.filename)\n",
     "\n",
     "    file_description.size = feature_map.size()\n",
-    "    file_description.unique_id = feature_map.getUniqueId()\n",
+    "    # file_description.unique_id = feature_map.getUniqueId() doesn't work on windows\n",
     "    print(file_description.unique_id)\n",
     "    file_descriptions[i] = file_description\n",
     "\n",
-    "    consensus_map.setColumnHeaders(file_descriptions)\n",
-    "    feature_grouper.group(feature_maps, consensus_map)\n",
+    "feature_grouper.group(feature_maps, consensus_map)\n",
+    "consensus_map.setColumnHeaders(file_descriptions)\n",
     "\n",
     "\n",
-    "    Consensus_file= os.path.join(\"results\", \"\", \"consensus\", \"\",\"interim\", \"\", 'consensus' + \".consensusXML\")\n",
-    "    ConsensusXMLFile().store(Consensus_file, consensus_map)\n",
+    "Consensus_file= os.path.join(\"results\", \"\", \"consensus\", \"\",\"interim\", \"\", 'consensus' + \".consensusXML\")\n",
+    "ConsensusXMLFile().store(Consensus_file, consensus_map)\n",
     "\n",
     "\n",
     "# get intensities as a DataFrame\n",
